# ha-nanit-sound-light

./: .gitignore  LICENSE  README.md  hacs.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml  release.yaml
custom_components/nanit_sound_light/: __init__.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  icons.json  light.py  manifest.json  models.py  number.py  sanitize.py  select.py  sensor.py  strings.json  switch.py  token_provider.py
custom_components/nanit_sound_light/aionanit_sl/: models.py  sl_protocol.py  sound_light.py
custom_components/nanit_sound_light/translations/: en.json
tests/unit/: conftest.py  test_config_flow_helpers.py  test_connection_mode_sensor.py  test_coordinator_auth_failed.py  test_diagnostics.py  test_light_restore.py  test_resolve_speaker_ip.py  test_sanitize.py  test_select_track_validation.py  test_sl_protocol.py  test_switch_grace.py  test_token_provider.py
