[project]
name = "ha-nanit-sound-light"
description = "Home Assistant integration for the Nanit Sound & Light Machine lamp"
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
version = "0.1.0"

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = [
  "custom_components/nanit_sound_light/aionanit_sl",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "PL", "RUF"]
ignore = ["PLR2004", "PLR0911", "PLR0912", "PLR0913", "PLR0915"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["PLR", "B017", "S101"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q"

[tool.mypy]
python_version = "3.13"
strict = false
ignore_missing_imports = true
exclude = [
  "custom_components/nanit_sound_light/aionanit_sl",
]
